@@ -1,3 +1,6 @@
+2011-09-08  Jeremy Cribb <jcribb@email.unc.edu>
+	* evt_GUI.m: updated to use 'convert_vidtable_to_beadstruct' function
+
 2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
 	* evt_GUI.m: fixed default values for filtering data.
 
